# Voxplorer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shader/: simple.frag  simple.vert
src/: Main.cpp
src/engine/: Camera.cpp  Camera.h  Game.cpp  Game.h  GameState.h  KeyStateProvider.cpp  KeyStateProvider.h  Keyboard.cpp  Keyboard.h  Mesh.cpp  Mesh.h  Renderable.h  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Vertex.hpp
src/game/: Voxplorer.cpp  Voxplorer.h
src/game/logic/: MarchingCubes.cpp  MarchingCubes.h
src/game/render/: VoxelChunkRenderer.cpp  VoxelChunkRenderer.h  VoxelWorldRenderer.cpp  VoxelWorldRenderer.h
src/game/state/: GenerateSingleVoxelChunkState.cpp  GenerateSingleVoxelChunkState.h  IdleGameState.cpp  IdleGameState.h  MarchingCubesBenchmarkState.cpp  MarchingCubesBenchmarkState.h
src/game/util/: Vec3Map.h
src/game/world/: Voxel.cpp  Voxel.h  VoxelChunk.cpp  VoxelChunk.h  VoxelChunkMap.hpp  VoxelField.h  VoxelGenerator.cpp  VoxelGenerator.h  VoxelWorld.cpp  VoxelWorld.h
